Cadastro de agendamento

--- a/Estudio/Pages/Shared/_Layout.cshtml
+++ b/Estudio/Pages/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Agendamentos <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Cadastrar agendamento</a></li>
+							<li><a href="/Agendamentos/CadAgendamento">Cadastrar agendamento</a></li>
 							<li><a href="#">Listar agendamentos</a></li>
 							<li><a href="#">Fechar agendamento</a></li>
 							<li><a href="#">Cadastrar consumíveis</a></li>
