--- a/Estudio/Pages/Shared/_Layout.cshtml
+++ b/Estudio/Pages/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
 							<li><a href="/Agendamentos/CadAgendamento">Cadastrar agendamento</a></li>
 							<li><a href="#">Listar agendamentos</a></li>
 							<li><a href="#">Fechar agendamento</a></li>
-							<li><a href="#">Cadastrar consumíveis</a></li>
+							<li><a href="/Agendamentos/CadConsumivel">Cadastrar consumíveis</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
