Fechamento de agendamentos

--- a/Estudio/Pages/Agendamentos/CadConsumivel.cshtml
+++ b/Estudio/Pages/Agendamentos/CadConsumivel.cshtml
@@ -31,7 +31,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					@for (int i = 0; i < Model.ConsumiveisViewModel.Capacity; i++) {
+					@for (int i = 0; i < Model.ConsumiveisViewModel.Count; i++) {
 					   <tr>
 						   <td>
 							   @*<input asp-for="ConsumiveisViewModel[i].IdConsumivel" type="hidden" value="@Model.Consumiveis[i].Id" />*@
