--- a/Estudio/Pages/Shared/_Layout.cshtml
+++ b/Estudio/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
 						<ul class="dropdown-menu">
 							<li><a href="/Agendamentos/CadAgendamento">Cadastrar agendamento</a></li>
 							<li><a href="#">Listar agendamentos</a></li>
-							<li><a href="#">Fechar agendamento</a></li>
+							<li><a href="/Agendamentos/FecharAgendamentoList">Fechar agendamento</a></li>
 							<li><a href="/Agendamentos/CadConsumivel">Cadastrar consumíveis</a></li>
 						</ul>
 					</li>
