Cadastro e listagem de instrumentos

--- a/Estudio/Pages/Shared/_Layout.cshtml
+++ b/Estudio/Pages/Shared/_Layout.cshtml
@@ -63,8 +63,8 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Instrumentos <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Cadastrar instrumentos</a></li>
-							<li><a href="#">Listar instrumentos</a></li>
+							<li><a href="/Instrumentos/CadInstrumento">Cadastrar instrumentos</a></li>
+							<li><a href="/Instrumentos/InstrumentosList">Listar instrumentos</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
