--- a/Estudio/Pages/Instrumentos/CadInstrumento.cshtml
+++ b/Estudio/Pages/Instrumentos/CadInstrumento.cshtml
@@ -28,7 +28,7 @@
 			<div class="form-group">
 				<label asp-for="Instrumento.Tipo" class="control-label"></label>
 				<select asp-for="Instrumento.Tipo" class="form-control">
-					<option value="0">Selecione uma sala</option>
+					<option value="0">Selecione um tipo</option>
 					<option value="GUITARRA">Guitarra</option>
 					<option value="BAIXO">Baixo</option>
 					<option value="TECLADO">Teclado</option>
