Senha verificada usando MD5

--- a/Estudio/Pages/Index.cshtml
+++ b/Estudio/Pages/Index.cshtml
@@ -10,8 +10,8 @@
         <label asp-for="Funcionario.Email" class="sr-only"></label>
         <input asp-for="Funcionario.Email" class="form-control" placeholder="Email" required autofocus>
         <label asp-for="Funcionario.Senha" class="sr-only">Senha</label>
-        <input asp-for="Funcionario.Senha" class="form-control" placeholder="Senha" required>
+        <input asp-for="Funcionario.Senha" type="password" class="form-control" placeholder="Senha" required>
 		
         <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
     </form>
-</div> <!-- /container -->
+</div>
