Correção ao fechar agendamento
Notei que ao fechar o agendamento somente o status de ativo estava sendo
atualizado. Corrigi para que também seja atualizado o valor total do
agendamento.

--- a/Estudio/Pages/Agendamentos/FecharAgendamento.cshtml
+++ b/Estudio/Pages/Agendamentos/FecharAgendamento.cshtml
@@ -42,5 +42,6 @@
 
 <form method="post">
 	@Html.HiddenFor(x => x.Agendamento.IdAgendamento)
-	<button class="btn btn-primary">Fechar agendamento</button>
+	@Html.HiddenFor(x => x.Agendamento.Valor)
+<button class="btn btn-primary">Fechar agendamento</button>
 </form>
